# bevy_terminal

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: basic_game.rs
src/: lib.rs
